// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Code /> should render Code with color 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="code"
    size="small"
    style={
      Array [
        Object {
          "backgroundColor": "hsla(216, 15%, 54%, 0.09)",
          "borderRadius": 4,
          "lineHeight": 0,
          "paddingBottom": 0,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 0,
          "verticalAlign": "middle",
        },
      ]
    }
  >
    <Text
      color="action.text.link.disabled"
      fontFamily="code"
      fontSize={25}
      fontWeight="regular"
      lineHeight={25}
      style={
        Array [
          Object {
            "color": "hsla(218, 19%, 81%, 1)",
            "fontFamily": "Courier",
            "fontSize": 10,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 14,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      TEST_TOKEN
    </Text>
  </View>
</View>
`;

exports[`<Code /> should render Code with default properties 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="code"
    size="small"
    style={
      Array [
        Object {
          "backgroundColor": "hsla(216, 15%, 54%, 0.09)",
          "borderRadius": 4,
          "lineHeight": 0,
          "paddingBottom": 0,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 0,
          "verticalAlign": "middle",
        },
      ]
    }
  >
    <Text
      color="surface.text.subtle.lowContrast"
      fontFamily="code"
      fontSize={25}
      fontWeight="regular"
      lineHeight={25}
      style={
        Array [
          Object {
            "color": "hsla(216, 27%, 36%, 1)",
            "fontFamily": "Courier",
            "fontSize": 10,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 14,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      TEST_TOKEN
    </Text>
  </View>
</View>
`;

exports[`<Code /> should render medium Code 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="code"
    size="medium"
    style={
      Array [
        Object {
          "backgroundColor": "hsla(216, 15%, 54%, 0.09)",
          "borderRadius": 4,
          "lineHeight": 0,
          "paddingBottom": 0,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 0,
          "verticalAlign": "middle",
        },
      ]
    }
  >
    <Text
      color="surface.text.subtle.lowContrast"
      fontFamily="code"
      fontSize={75}
      fontWeight="regular"
      lineHeight={75}
      style={
        Array [
          Object {
            "color": "hsla(216, 27%, 36%, 1)",
            "fontFamily": "Courier",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 18,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      MEDIUM
    </Text>
  </View>
</View>
`;

exports[`<Code /> should render small Code 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="code"
    size="small"
    style={
      Array [
        Object {
          "backgroundColor": "hsla(216, 15%, 54%, 0.09)",
          "borderRadius": 4,
          "lineHeight": 0,
          "paddingBottom": 0,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 0,
          "verticalAlign": "middle",
        },
      ]
    }
  >
    <Text
      color="surface.text.subtle.lowContrast"
      fontFamily="code"
      fontSize={25}
      fontWeight="regular"
      lineHeight={25}
      style={
        Array [
          Object {
            "color": "hsla(216, 27%, 36%, 1)",
            "fontFamily": "Courier",
            "fontSize": 10,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 14,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textDecorationLine": "none",
          },
        ]
      }
    >
      SMALL
    </Text>
  </View>
</View>
`;
